fix body overflow issue

--- a/assets/css/tailwindcss.css
+++ b/assets/css/tailwindcss.css
@@ -791,6 +791,10 @@ video {
   overflow: hidden;
 }
 
+.overflow-x-hidden{
+  overflow-x: hidden;
+}
+
 .p-4{
   padding: 16px;
 }
